force-app/main/default/objects/cel_Transaction_Line__c/cel_Transaction_Line__c.object-meta.xml
<CustomObject>
    <label>Transaction Line</label>
    <nameField>
        <label>Transaction Line Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transactions Line</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>