force-app/main/default/objects/cel_Transaction_Line__c/fields/cel_cross_selling__c.field-meta.xml
<CustomField>
    <fullName>cel_cross_selling__c</fullName>
    <defaultValue>false</defaultValue>
    <label>cross_selling</label>
    <type>Checkbox</type>
</CustomField>