force-app/main/default/objects/cel_Transaction_Line__c/fields/cel_discount_amount_2__c.field-meta.xml
<CustomField>
    <fullName>cel_discount_amount_2__c</fullName>
    <label>discount_amount_2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>