force-app/main/default/objects/cel_Transaction_Line__c/fields/cel_discount_flag__c.field-meta.xml
<CustomField>
    <fullName>cel_discount_flag__c</fullName>
    <label>discount_flag</label>
    <length>15</length>
    <type>Text</type>
</CustomField>