force-app/main/default/objects/cel_Transaction_Line__c/fields/cel_discount_reason_name_2__c.field-meta.xml
<CustomField>
    <fullName>cel_discount_reason_name_2__c</fullName>
    <label>discount_reason_name_2</label>
    <length>6</length>
    <type>Text</type>
</CustomField>