force-app/main/default/objects/cel_Transaction_Line__c/fields/cel_discount_value_local_wo_tax_eur__c.field-meta.xml
<CustomField>
    <fullName>cel_discount_value_local_wo_tax_eur__c</fullName>
    <label>discount_value_local_wo_tax_eur</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>