force-app/main/default/objects/cel_Transaction_Line__c/fields/cel_invoice_line__c.field-meta.xml
<CustomField>
    <fullName>cel_invoice_line__c</fullName>
    <label>invoice_line</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>