force-app/main/default/objects/cel_Transaction_Line__c/fields/cel_invoice_sid__c.field-meta.xml
<CustomField>
    <fullName>cel_invoice_sid__c</fullName>
    <label>invoice SID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>