force-app/main/default/objects/cel_Transaction_Line__c/fields/cel_invoice_SID_Line__c.field-meta.xml
<CustomField>
    <fullName>cel_invoice_SID_Line__c</fullName>
    <externalId>true</externalId>
    <label>Invoice SID Line</label>
    <length>30</length>
    <type>Text</type>
</CustomField>