force-app/main/default/objects/cel_Transaction_Line__c/fields/cel_invoice_type_c__c.field-meta.xml
<CustomField>
    <fullName>cel_invoice_type_c__c</fullName>
    <label>Invoice Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>Return</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>