force-app/main/default/objects/cel_Transaction_Line__c/fields/cel_locale_currency__c.field-meta.xml
<CustomField>
    <fullName>cel_locale_currency__c</fullName>
    <formula>cel_transaction__r.cel_locale_currency__c</formula>
    <label>Locale Currency</label>
    <type>Text</type>
</CustomField>