force-app/main/default/objects/cel_Transaction_Line__c/fields/cel_macro_activity_name__c.field-meta.xml
<CustomField>
    <fullName>cel_macro_activity_name__c</fullName>
    <formula>cel_Product2Id__r.cel_macro_activity_name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Categories</label>
    <type>Text</type>
</CustomField>