force-app/main/default/objects/cel_Transaction_Line__c/fields/cel_net_value_local_tax_inc_cur__c.field-meta.xml
<CustomField>
    <fullName>cel_net_value_local_tax_inc_cur__c</fullName>
    <label>Net Value Local Tax Inc Cur</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>