force-app/main/default/objects/cel_Transaction_Line__c/fields/cel_net_value_local_tax_inc_cur_with_cur__c.field-meta.xml
<CustomField>
    <fullName>cel_net_value_local_tax_inc_cur_with_cur__c</fullName>
    <formula>IF( 
FIND(&quot;.&quot;,TEXT(cel_net_value_local_tax_inc_cur__c))=0, 
cel_locale_currency__c + &#39; &#39; + TEXT(cel_net_value_local_tax_inc_cur__c)+&quot;,00&quot;, 
IF ( 
LEN(TEXT(cel_net_value_local_tax_inc_cur__c))-FIND(&quot;.&quot;,TEXT(cel_net_value_local_tax_inc_cur__c))=1, 
cel_locale_currency__c + &#39; &#39; + TEXT(cel_net_value_local_tax_inc_cur__c)+&quot;0&quot;,	
IF ( 
FIND(&quot;.&quot;,TEXT(cel_net_value_local_tax_inc_cur__c))&gt;0, 
cel_locale_currency__c + &#39; &#39; + SUBSTITUTE(TEXT(cel_net_value_local_tax_inc_cur__c), &#39;.&#39;, &#39;,&#39;),	
cel_locale_currency__c + &#39; &#39; + TEXT(cel_net_value_local_tax_inc_cur__c)) 
) 
)</formula>
    <label>Net Value Local Tax Inc Cur</label>
    <type>Text</type>
</CustomField>