force-app/main/default/objects/cel_Transaction_Line__c/fields/cel_net_value_local_wo_tax_eur__c.field-meta.xml
<CustomField>
    <fullName>cel_net_value_local_wo_tax_eur__c</fullName>
    <label>Net Value Local Wo Tax Eur</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>