force-app/main/default/objects/cel_Transaction_Line__c/fields/cel_Product2Id__c.field-meta.xml
<CustomField>
    <fullName>cel_Product2Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Transactions Line</relationshipLabel>
    <relationshipName>Transactions_Line</relationshipName>
    <type>Lookup</type>
</CustomField>