force-app/main/default/objects/cel_Transaction_Line__c/fields/cel_product_segmentation_code__c.field-meta.xml
<CustomField>
    <fullName>cel_product_segmentation_code__c</fullName>
    <label>product_segmentation_code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>