force-app/main/default/objects/cel_Transaction_Line__c/fields/cel_Quantity__c.field-meta.xml
<CustomField>
    <fullName>cel_Quantity__c</fullName>
    <label>Quantity</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>