force-app/main/default/objects/cel_Transaction_Line__c/fields/cel_sale_associate__c.field-meta.xml
<CustomField>
    <fullName>cel_sale_associate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sale Associate</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Transactions Line</relationshipLabel>
    <relationshipName>Transactions_Line</relationshipName>
    <type>Lookup</type>
</CustomField>