force-app/main/default/objects/cel_Transaction_Line__c/fields/cel_season_collection_code__c.field-meta.xml
<CustomField>
    <fullName>cel_season_collection_code__c</fullName>
    <label>Season Collection Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>