force-app/main/default/objects/cel_Transaction_Line__c/fields/cel_transaction__c.field-meta.xml
<CustomField>
    <fullName>cel_transaction__c</fullName>
    <label>Transaction</label>
    <referenceTo>cel_Transaction__c</referenceTo>
    <relationshipLabel>Transactions Line</relationshipLabel>
    <relationshipName>Transactions_Line</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>