force-app/main/default/objects/cel_Transaction_Line__c/fields/cel_type__c.field-meta.xml
<CustomField>
    <fullName>cel_type__c</fullName>
    <label>type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>