force-app/main/default/objects/cel_Transaction_Line__c/fields/cel_value_local_wo_tax_cur__c.field-meta.xml
<CustomField>
    <fullName>cel_value_local_wo_tax_cur__c</fullName>
    <label>Net Value Local Wo Tax Cur</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>